# nftapp

./: Cargo.toml  Cross.toml  build.rs  test.nft
include/: foo.c  foo.h  nftset.c
src/: main.rs
src/ffi/: foo.rs  mod.rs
