[package]
name = "nftapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
either = "1.12.0"
anyhow = "1.0.86"

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"

[profile.release]
# see: https://github.com/johnthagen/min-sized-rust
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true